--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Anna Smith | About</title>
+	<title>Anna  | About</title>
 	<link href="https://fonts.googleapis.com/css?family=Merriweather|Raleway:400,600,700" rel="stylesheet">
 	
 	<link rel="stylesheet" href="css/style.css">
