updated personal site files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <div><head>
+  <head>
       <meta charset="utf-8">
       <meta name="description" content="Luisa Tsang's Portfolio">
       <meta name="keywords" content="one, two, three">
@@ -13,26 +13,27 @@
 
   </head>
   <body>
-    <nav>
-      <strong>About Me</strong>
-      |
-      <a href="portfolio.html">Portfolio</a>
-    </nav>
+    <div class="top">
+       <nav>
+        <strong>About Me</strong>
+        |
+        <a href="portfolio.html">Portfolio</a>
+      </nav>
+      <p>
+        <h1> Hi, I'm Luisa Tsang</h1>
+      </p>
+    </div>
+    <div class ="bottom">
+      <h3> Medical Student </h3>
 
-<p>
-    <h1> <center> Hi, I'm Luisa Tsang</h1>
-</p>
-</div>
-    <h3> <center> Medical Student </h3>
+      <h3> Healthcare Systems and Data Analytics Enthusiast </h3>
 
-    <h3> <center> Healthcare Systems and Data Analytics Enthusiast </h3>
+      <h3> Entrepreneur </h3>
 
-    <h3> <center> Entrepreneur </h3>
+      <h3> Healthcare Consultant </h3>
 
-    <h3> <center> Healthcare Consultant </h3>
-
-    <h3> <center> Aspiring Developer </h3>
-
+      <h3> Aspiring Developer </h3>
+    </div>
     
 
     <hr>
